* matplotlib format bugfix in psd_chdeg
* improvements for kappa goniometers
* remove use of deprecated scipy namespace

v1.7.3, 2021-11-26

* enable building Python 3.10 wheels
* fix missing files in source package on PyPI
* make builddocs pipeline more robust

v1.7.2, 2021-11-22

* fix returned fitting error in area_detector_calib* (issue #126)
* remove dependency on soon deprecated distutils
* fix regression bug with matplotlib 3.5
* update copyright notices from git commit history
* fix code error found by linting (flake8)
* CIF atom type normalization of oxidation state (issue #122)
* improve documentation of PowerModel multiprocessing code (issue #121)
* fix numpy-1.20 deprecation warnings
* bugfix in kinematical diffraction model.
* add visualization of individual layer densities (issue #107)
* new coplanar_alphaf helper function

v1.7.1, 2021-01-02

* harmonize dependency versions between README and setup.py
* remove PDF documentation and other generatable content from the GIT
  repository
* new azure pipeline for documentation generation
* new azure pipeline for wheel generation (issue #111)

v1.7.0, 2020-12-08

* allow string decoding to fail in tif headers
* ignore nan values in maplog
* add Azure pipeline for continuous testing and automatic builds
* performance optimizations in Crystal.environment
* Continous integration tests running on MacOS, Windows and Linux
* new flavor of material/Crystal definition from fractional atomic coordinates
* bugfix in derivative functions (xu.math.functions)
* effectiveDensity slicing for XRR simulations, thanks to MM
* new possibility to transform unit cells and find symmetries
* bugfix of numpy.set_printoptions use
* require Python 3.6 due to use of f-strings
* new PowderModel.plot method to quickly visualize a Powder pattern
* remove deprecated fit_xrr function
* SGLattice.get_allowed_hkl function
* make SGLattice.convert_to_P1 a normal method
* SGLattice improvements: add symmetry operations, equivalent_hkls,